Add other routes, validations and DB tables
